--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "type": "library",
     "require": {
         "lcobucci/jwt": "^3.2",
-        "illuminate/support": "^5.6"
+        "illuminate/support": "^5.4"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.8",
-        "phpunit/phpunit": "^7.0"
+        "orchestra/testbench": "^3.4",
+        "phpunit/phpunit": "5.*|6.*|7.*"
     },
     "license": "MIT",
     "authors": [
