--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,11 @@
     "type": "library",
     "require": {
         "lcobucci/jwt": "^3.2",
-        "illuminate/support": "^5.4|^6.0"
+        "illuminate/support": "^5.4|^6.0|^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.4",
-        "phpunit/phpunit": "5.*|6.*|7.*"
+        "orchestra/testbench": "^5.0",
+        "phpunit/phpunit": "~9.0"
     },
     "license": "MIT",
     "authors": [
