--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "lcobucci/jwt": "^3.2",
-        "illuminate/support": "^5.4|^6.0|^7.0"
+        "illuminate/support": "^5.4|^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "^5.0",
