php 8 and laravel 9 updates

--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,12 @@
     "description": "Simple helper package that makes it easy to generate and consume JWT tokens",
     "type": "library",
     "require": {
+        "php": "^8.0",
         "lcobucci/jwt": "3.2.*|3.3.*",
-        "illuminate/support": "^5.4|^6.0|^7.0|^8.0"
+        "illuminate/support": "^5.4|^6.0|^7.0|^8.0|^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "~9.0"
     },
     "license": "MIT",
