--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,10 @@
     "description": "Simple helper package that makes it easy to generate and consume JWT tokens",
     "type": "library",
     "require": {
-        "php": "^8.0",
-        "lcobucci/jwt": "3.2.*|3.3.*",
-        "illuminate/support": "^5.4|^6.0|^7.0|^8.0|^9.0"
+        "php": "^8.1|^8.2",
+        "lcobucci/jwt": "^4.3",
+        "illuminate/support": "^8.0|^9.0|^10.0",
+        "spatie/laravel-package-tools": "^1.14"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0",
@@ -29,7 +30,7 @@
                 "STS\\JWT\\JWTServiceProvider"
             ],
             "aliases": {
-                "JWT": "STS\\JWT\\JWTFacade"
+                "JWT": "STS\\JWT\\Facades\\JWT"
             }
         }
     }
