--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": "^8.0",
         "lcobucci/jwt": "3.2.*|3.3.*",
-        "illuminate/support": "^5.4|^6.0|^7.0|^8.0|^9.0"
+        "illuminate/support": "^5.4|^6.0|^7.0|^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0",
