--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "Helper package that makes it easy to generate, consume, and protect routes with JWT tokens in Laravel",
     "type": "library",
     "require": {
-        "php": "^8.1|^8.2",
+        "php": "^8.1",
         "lcobucci/jwt": "^4.3",
-        "illuminate/support": "^8.0|^9.0|^10.0"
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "orchestra/testbench": "^7.0",
